# flow_markets

./: .env.example  .gitignore  README.md  flow_markets_ai.py  pyproject.toml
chanpy/: VENDOR.md
deploy/grafana/: dashboard.json
deploy/k8s/: deployment.yaml
scripts/: demo_chan_chart.py  evaluate_outcomes.py  export_chan_structure_fixture.py  flow_markets_ai.py  format_technical_display.py  init_analysis_db.py  multi_timeframe_analyze.py  run_flow_markets.py  run_get_chan_structure.py  run_technical_analyst.py  show_analysis_db.py  test_analysis_persist.py
src/app/: __main__.py  main.py
src/app/analysis_store/: __init__.py  db_manager.py  history_builder.py  history_enforcement.py  learning_feedback.py  outcome.py  persist.py  similar_cases.py  stats_formatter.py  stats_service.py
src/app/api/: dependencies.py
src/app/api/v1/: __init__.py  chan.py  demo.py  flow_markets.py
src/app/core/: config.py  llm_endpoints.py
src/app/crews/config/: agents.yaml  tasks.yaml  (+2 more)
src/app/observability/: logging.py
src/app/schemas/: chan_api.py  chan_structure.py  deep_research.py  flow_markets.py  flow_markets_api.py  flow_markets_deliverables.py  technical_analysis_display.py  trading_agents.py
tests/: test_analysis_store_db.py  test_analysis_store_learning_feedback.py  test_analysis_store_outcome.py  test_analysis_store_persist.py  test_analysis_store_similar_cases.py  test_analysis_store_stats.py  test_chan_divergence.py  test_chan_engine_smoke.py  test_chan_macd_strength.py  test_chan_structure_exporter_parity.py  test_chanlun_v2_normalize.py  test_chanpy_smoke.py  test_get_chan_structure.py  test_history_enforcement.py  test_multi_timeframe.py  test_trader_display_markdown.py
tests/integration/: test_deep_research.py  test_flow_markets.py
tests/unit/: test_config.py  test_deepseek_endpoint.py
(+34 files in other folders)
